--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description: A developer friendly theme with atomic templates and an elegant ove
 Version: 1.3
 Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
-Tags: widgets, customizable, 3-column, framework, semantic, white, red, gray, carrington
+Tags: widgets, customizable, 3-column, framework, semantic, white, red, gray, carrington, microformats, hatom, hcard
 
 // This file is part of the Carrington Theme for WordPress
 // http://carringtontheme.com
