Added overflow:auto to .entry-content and .entry-summary, safeguarding IE from breaking layout.

--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -355,6 +355,10 @@ hr.divider {
 address.author {
 	display: inline;
 }
+.entry-content,
+.entry-summary {
+	overflow:auto;
+}
 
 .full {
 	background:url(../images/divider-ornament-wide.gif) no-repeat center bottom;
