--- a/css/image.css
+++ b/css/image.css
@@ -32,7 +32,7 @@ a:visited {
 }
 
 .entry-attachment img {
-	border:2px solid #111;
+	border:1px solid #111;
 }
 .figure-info {
 	background:transparent url(../images/divider-ornament-wide-darker.png) no-repeat scroll center top;
@@ -59,30 +59,18 @@ a:visited {
 
 .previous-attachment,
 .next-attachment {
-	background:url(../images/50px-flourish-left.png) no-repeat 10px bottom;
+	background:url(../images/50px-flourish-left.png) no-repeat center bottom;
 	padding-bottom:13px;
 	position:absolute;
 	top:0px;
 }
 .next-attachment{
-	background:url(../images/50px-flourish-right.png) no-repeat right bottom;
+	background:url(../images/50px-flourish-right.png) no-repeat center bottom;
 	right:0;
-}
-.previous-attachment span,
-.next-attachment span {
-	background:#111 url(../images/arrow-bullet-dark-left.gif) no-repeat left center;
-	display:block;
-	padding-left:10px;
-}
-.next-attachment span {
-	background-image:url(../images/arrow-bullet-dark-right.gif);
-	background-position:right center;
-	padding:0 10px 0 0;
 }
 
 .previous-attachment a,
 .next-attachment a{
-	border:2px solid #111;
 	display:block;
 	width:50px;
 	height:50px;
@@ -92,4 +80,10 @@ a:visited {
 .next-attachment a:hover {
 	width:auto;
 	height:auto;
+}
+.next-attachment a:hover img {
+	float:none;
+}
+.next-attachment img {
+	float:right; /* incremental gain in FF: image is right aligned against top-right corner. Less of a visual jump */
 }
