--- a/css/image.css
+++ b/css/image.css
@@ -1,5 +1,5 @@
 body {
-	background:#181818;
+	background:#000;
 	color:#ccc;
 }
 
@@ -21,6 +21,7 @@ a:visited {
 	border-bottom:1px solid #333;
 	display:block;
 	font-size:11.5px;
+	font-weight: normal;
 	padding:10px;
 	text-transform:uppercase;
 }
@@ -32,7 +33,7 @@ a:visited {
 }
 
 .entry-attachment img {
-	border:1px solid #111;
+	border:1px solid #181818;
 }
 .figure-info {
 	background:transparent url(../images/divider-ornament-wide-darker.png) no-repeat scroll center top;
