--- a/css/ie.css
+++ b/css/ie.css
@@ -7,11 +7,11 @@
 #all-categories ul,
 #all-categories li,
 .full,
-ol#comments-list li.hentry,
+h2#comments,
+.comment,
+ol.comments-list li.hentry,
 #comment-form,
 #comment-form .section,
-.comment,
-h2#comments,
 .widget,
 .pagination,
 #carrington-about .about {zoom:1;}
@@ -31,7 +31,7 @@ h2#comments,
 ol.archive,
 .excerpt,
 #content .search,
-ol#comments-list li,
+ol.comments-list li.hentry,
 .pingback,
 .trackback,
 #carrington-archives ul,
