--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -489,56 +489,49 @@ h2.comments {
 	margin: 0 0 .375em 0;
 	padding-top:71px;
 }
-ol.comments-list,
-ol.pings-list {
+ol.commentlist{
 	clear:both;
 	list-style:none;
 	margin:0;
 }
-ol.comments-list li.hentry {
+ol.commentlist li.hentry {
 	border-top:1px dotted #cecfd1;
 
 }
-#content ol.comments-list li.hentry{
+#content ol.commentlist li{
 	margin:0; /* Override article list styles */
 }
 .comment {
 	overflow:hidden;
 	padding:10px; /* 2 units + 4px for gravatar */
 }
-.comment .info {
-	display:block;
-	float:left;
-	padding: 2px 10px 0 46px;
-	position:relative;
-	width:150px;
-}
-.comment .info .comment-author {
+.comment .author {
 	font-size: 1.16666667em; /* 14 */
-	font-weight:bold;
 	line-height: 1.28571429;
 }
+.comment cite.fn {
+	font-weight:bold;
+}
 .comment .comment-author .photo img{
-	left: 0;
-	position:absolute;
-	top: 0;
-}
-.comment .info .said,
-.comment .info .on {
-	display:none;
-}
-.comment .comment-date {
-	clear:both;
-}
-.comment .comment-date a,
-.comment .comment-date a:visited {
-	color:#999;
+	float:left;
+	margin-right:10px;
 }
 .comment .comment-content {
-	float: left;
-	width: 324px;
+	margin-bottom:3px;
+	margin-top:3px;
 }
-
+.comment .comment-content p:last-child {
+	margin-bottom:0;
+}
+.comment .comment-content,
+.comment-meta {
+	margin-left:64px;
+}
+.comment-meta {
+	color:#999;
+	font-size:11.5px;
+	line-height:12px;
+}
 .comment .notification {
 	background:#EFEFF1 url(../images/watermark-light.gif);
 	margin:0 0 10px;
