--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
 Tags: widgets, customizable, 3-column, framework, semantic, white, red, gray, carrington, microformats, hatom, hcard
 
-// This file is part of the Carrington Theme for WordPress
+// This file is part of the Carrington Blog Theme for WordPress
 // http://carringtontheme.com
 //
 // Copyright (c) 2008 Crowd Favorite, Ltd. All rights reserved.
