--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Tags: widgets, customizable, 3-column, framework, semantic, white, red, gray, ca
 // This file is part of the Carrington Blog Theme for WordPress
 // http://carringtontheme.com
 //
-// Copyright (c) 2008 Crowd Favorite, Ltd. All rights reserved.
+// Copyright (c) 2008-2009 Crowd Favorite, Ltd. All rights reserved.
 // http://crowdfavorite.com
 //
 // Released under the GPL license
