Added translucent png image for footer divider.

--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -354,7 +354,7 @@ hr.divider {
 	color: #CECFD1;
 }
 #footer .wrapper {
-	background: url(../img/divider-ornament-wide-dark.gif) no-repeat center bottom;
+	background: url(../img/footer/divider-ornament-wide-light.png) no-repeat center bottom;
 	overflow:hidden;
 	padding-bottom:28px;
 }
