--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -144,12 +144,17 @@ hr.divider {
 	width: 960px;
 }
 #header {
-	background: #51555c url(../img/header/gradient-dark.png) repeat-x bottom;
+	background-color: #51555c;
+	background-image:url(../img/header/gradient-dark.png);
+	background-repeat:repeat-x;
+	background-position:left bottom;
 	color: #cecfd1;
 	min-width: 980px;
 }
 #header .wrapper {
-	background: url(../img/header/texture-dark.png) no-repeat center bottom;
+	background-image:url(../img/header/texture-dark.png);
+	background-repeat:repeat-x;
+	background-position:center bottom;
 	overflow: hidden;
 	padding: 13px 10px 10px;
 }
@@ -347,7 +352,7 @@ hr.divider {
 	clear: both;
 	color: #999;
 	min-width: 980px;
-	padding: 32px 0 200px;
+	padding: 32px 0 64px;
 }
 #footer a,
 #footer a:visited {
