--- a/css/ie.css
+++ b/css/ie.css
@@ -24,6 +24,8 @@
 #all-categories ul,
 #all-categories li,
 .full,
+.entry-content,
+.entry-summary,
 h2#comments,
 .comment,
 ol.comments-list li.hentry,
@@ -48,7 +50,7 @@ ol.comments-list li.hentry,
 ol.archive,
 .excerpt,
 #content .search,
-ol.comments-list li.hentry,
+ol.commentslist li.hentry,
 .pingback,
 .trackback,
 #carrington-archives ul,
