"Oops" fix to comment list borders.

--- a/css/ie.css
+++ b/css/ie.css
@@ -50,7 +50,7 @@ ol.comments-list li.hentry,
 ol.archive,
 .excerpt,
 #content .search,
-ol.commentslist li.hentry,
+ol.commentlist li.hentry,
 .pingback,
 .trackback,
 #carrington-archives ul,
