--- a/css/typography.css
+++ b/css/typography.css
@@ -15,51 +15,55 @@
 // **********************************************************************
 */
 
-/* =====Reset===== */
-html,body,div,span,a,img,h1,h2,h3,h4,h5,h6,p,blockquote,q,cite,abbr,acronym,caption,address,strong,strike,del,big,small,font,dfn,ins,kbd,s,samp,tt,var,pre,code,dfn,var,iframe,applet,object,fieldset,form,label,legend,dl,dt,dd,ul,ol,li,table,caption,tbody,tfoot,thead,tr,th,td{
-	border: 0;
-	font-family: inherit;
-	font-size:100%;
-	font-style:inherit; 
-	font-weight:inherit;
-	margin:0;
-	outline: 0;
-	padding:0;
-	vertical-align: baseline;
-}
-caption,th,td {text-align:left}
-table {
-	border-collapse:collapse;
-	border-spacing:0;
-}
-blockquote:before,blockquote:after,q:before,q:after {content:''}
+/* Reset: based on http://meyerweb.com/eric/tools/css/reset v1.0 | 20080212, sans table styles
+============================================================================================== */
 
-/* =====Typography=====*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend{
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	vertical-align: baseline;
+	background: transparent;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+:focus {
+	outline: 0;
+}
+cite,
+address {
+	display:inline;
+	font-style:normal;
+}
+
+/* Typography
+======================================================*/
 body {
 	background: #fff;
 	color: #51555c;
-	font: 75%/1.5 helvetica, arial, sans-serif; /* Set in percentages so IE6 can still resize. The percentage notation also fixes a strange quirk where IE dramaticly scales text. */
-}
-html>body {
-	font-size: 12px; /* a more exact setting in pixels for browsers that can resize them. */
+	font: 12px/18px helvetica, arial, sans-serif; /* Set in percentages so IE6 can still resize. The percentage notation also fixes a strange quirk where IE dramaticly scales text. */
 }
 code {
 	font-family: "Lucida Console", Monaco, monospace;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong {
-	font-weight: bold;
-}
-em,
 *[lang] {
 	font-style: italic;
 }
-strike,
 del {
 	text-decoration: line-through;
 }
@@ -76,6 +80,14 @@ acronym,
 .small-caps {
 	letter-spacing: 0.1em;
 }
+pre {
+	overflow: auto;
+}
+textarea {
+	font-family: helvetica, arial, sans-serif;
+	line-height: 1.5;
+	padding: 3px;
+}
 /* Links */
 a,
 a:visited {
@@ -89,16 +101,16 @@ a:active {
 	text-decoration: underline;
 }
 h1 a,
-h1 a:visited,
 h2 a,
-h2 a:visited,
 h3 a,
-h3 a:visited,
 h4 a,
-h4 a:visited,
 h5 a,
-h5 a:visited,
 h6 a,
+h1 a:visited,
+h2 a:visited,
+h3 a:visited,
+h4 a:visited,
+h5 a:visited,
 h6 a:visited {
 	color: #51555c;
 }
@@ -126,90 +138,67 @@ del[title] {
  /* fancy ampersands */
 .amp {
 	font-family: Baskerville, "Goudy Old Style", "Palatino", "Book Antiqua", serif;
-	font-size: 110%;
+	font-size: 13px;
 	font-style: italic;
 }
 /* Font sizes and vertical measure */
-h1 {
-	font-size: 2em; /* 24 */
-	line-height: 1;
-	margin: 1.125em 0 .25em;
-}
+h1,
 h2,
-big {
-	font-size: 1.5em; /* 18 */
-	line-height: 1;
-}
-h2 {
-	margin: 0 0 .5em 0;
-}
-h3 {
-	font-size: 1.16666667em; /* 14 */
-	line-height: 1.28571429;
-	margin: 0 0 .58333334em 0;
-}
+h3,
 h4,
 h5,
 h6 {
-	margin: 0 0 .75em 0;
+	margin-bottom:9px;
 }
-p {
-	margin: 0 0 1.5em 0;
+h1 {
+	font-size: 24px;
+	line-height:1;
+}
+h2 {
+	font-size: 18px;
+}
+h3 {
+	font-size: 14px;
+}
+p,
+pre,
+dl,
+ul,
+ol {
+	margin-bottom:18px;
 }
 blockquote {
-	border-left:.16666667em solid #e9eaea;
-	margin: 0 .75em .75em .75em;
-	padding-left:1em;
+	border-left:2px solid #e9eaea;
+	margin:0 9px 9px;
+	padding-left:10px;
 }
-small,
-acronym,
-.caps {
-	font-size: .833333333333em;
-	line-height: 1.8em;
-}
-pre {
-	font-size: 1em;
-	line-height: 1.5;
-	margin-bottom: 1.5em;
-	overflow: auto;
-}
-textarea {
-	font-family: helvetica, arial, sans-serif;
-	font-size: 1em;
-	line-height: 1.5;
-	padding: 3px;
-}
-ul,
 ol,
 dd {
-	margin: 0 0 1.5em 2em;
+	margin-left:18px;
 }
 li ul,
 li ol {
 	margin-bottom: 0;
 }
-ul {
-	list-style-image: url(../img/arrow-bullet.gif);
+li,
+dd {
+	margin-bottom:9px;
 }
-
-#content li, #content dd {
-	margin-bottom: .5em;
+ul li {
+	background: url(../img/arrow-bullet.gif) no-repeat left top;
+	list-style:none;
+	padding-left:20px;
 }
-/* Tables */
-table {
-	border-left: .083333333em solid #eee;
-	border-top: .083333333em solid #eee;
+acronym,
+.caps,
+.small {
+	font-size: 11.5px;
 }
-td,th {
-	line-height: 1.33333333em;
-	padding: 0 .5em;
-}
-th {
-	background-color: #eee;
-	border-bottom: .083333333em solid #ddd;
-	border-right: .083333333em solid #ddd;
-}
-td {
-	border-bottom: .083333333em solid #eee;
-	border-right: .083333333em solid #eee;
+/* No formatting class */
+.plain,
+.plain li {
+	background:transparent;
+	list-style:none;
+	margin:0;
+	padding:0;
 }
